# chord-midi

./: .gitignore  Cargo.toml  Justfile  README.md  neonlight.midi  neonlight.txt
.github/workflows/: gh-pages.yml
chord_midi/: Cargo.toml
chord_midi/src/: ast.rs  chord.rs  foarmat.rs  format.rs  lib.rs  midi.rs  parser.rs  parser_util.rs  scale.rs  score.rs  syntax.rs  transform.rs
chord_midi/src/de/: ast.rs
chord_midi/src/export/: midi.rs  mod.rs  rechord.rs
chord_midi/src/import/: chord.rs  mod.rs  rechord.rs  sexp.rs
chord_midi/src/model/: ast.rs  chord.rs  key.rs  mod.rs  modifier.rs  pitch.rs  scale.rs  score.rs  transform.rs
chord_midi/src/parser/: ast.rs  chord.rs  mod.rs  rechord.rs  sexp.rs
chord_midi/src/ser/: midi.rs  score.rs
chord_midi_cli/: Cargo.toml
chord_midi_cli/src/: main.rs
chord_midi_wasm/: Cargo.toml  build.sh
chord_midi_wasm/src/: lib.rs
chord_midi_web/: Cargo.toml  index.html
chord_midi_web/src/: main.rs
src/: chord.rs  error.rs  main.rs  midi.rs  parser.rs  score.rs
src/de/: ast.rs  chord.rs  mod.rs  score.rs
src/model/: chord.rs  degree.rs  score.rs
src/ser/: midi.rs  mod.rs  score.rs
web/: index.html  main.js  package-lock.json  package.json
