[package]
name = "chord_midi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
regex = "1.10.2"
midi_file = "0.0.3"
rust-music-theory = "0.2.0"
nom = "7.1.3"
nom-regex = "0.2.0"
nom_locate = "4.2.0"
